# bi-mcp

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: run_tests_advisory.sh
.claude/skills/bi-troubleshoot/: SKILL.md
scripts/: smoke_concurrent_set_camera.py  smoke_motion_config.py  smoke_verify_inconclusive.py
src/bi_mcp/: __main__.py  cli.py  client.py  errors.py  logging_setup.py  reg.py  server.py  shapers.py  tools.py
src/bi_mcp/tools/: __init__.py  registry.py  tools_actionset.py  tools_alert_image.py  tools_alerts.py  tools_audit_actions.py  tools_cameras.py  tools_clips.py  tools_explain_alert.py  tools_log.py  tools_mutations.py  tools_ptz.py  tools_reg.py  tools_snapshot.py  tools_status.py  tools_timeline.py
src/bi_mcp/utils/: logging.py  time.py
tests/: conftest.py
tests/unit/: test_mutation_gate.py  test_reg_parser.py  test_server_result_to_content.py  test_shape_camlist_stale_fencing.py  test_shape_ptz_inconsistencies.py  test_shape_reg_mask_omission.py  test_shape_reg_profile_sync.py  test_shape_reg_ptz_schedule_events.py  test_shape_reg_retriggers_label.py  test_shape_status_profile_name.py  test_shape_timeline.py  test_shapers_actionset.py  test_tool_get_alert_image.py  test_tool_get_camera_snapshot.py  test_tool_get_timeline.py  test_tool_status_enrichment_resilience.py
