[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bi-mcp"
version = "0.3.0"
description = "MCP server for Blue Iris NVR — exposes read-only tools backed by the Blue Iris JSON API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "bi-mcp contributors" }]
keywords = ["mcp", "blue-iris", "nvr", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
    "python-registry>=1.3",
]

[project.scripts]
bi-mcp-server = "bi_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[project.urls]
Homepage = "https://github.com/whoamiTM/bi-mcp"
Issues = "https://github.com/whoamiTM/bi-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bi_mcp"]
